--- a/index.html
+++ b/index.html
@@ -4,25 +4,19 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Smart Meter Quality Check</title>
-<!-- Tailwind CSS -->
 <script src="https://cdn.tailwindcss.com"></script>
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
 <style>
-    body {
-        font-family: 'Inter', sans-serif;
-    }
+    body { font-family: 'Inter', sans-serif; }
     .loading-indicator {
-        border: 4px solid rgba(0, 0, 0, 0.1);
+        border: 4px solid rgba(0,0,0,0.1);
         border-top: 4px solid #3b82f6;
         border-radius: 50%;
         width: 36px;
         height: 36px;
         animation: spin 1s linear infinite;
     }
-    @keyframes spin {
-        0% { transform: rotate(0deg); }
-        100% { transform: rotate(360deg); }
-    }
+    @keyframes spin { 0%{transform:rotate(0deg);}100%{transform:rotate(360deg);} }
 </style>
 </head>
 <body class="bg-gray-100 min-h-screen flex items-center justify-center p-4">
@@ -30,7 +24,7 @@
     <h1 class="text-3xl font-bold text-center text-gray-800 mb-2">Smart Meter Quality Check</h1>
     <p class="text-center text-gray-600 mb-6">Upload a smart meter image for AI analysis.</p>
 
-    <!-- Image Upload -->
+    <!-- Upload -->
     <div class="mb-6 flex flex-col items-center">
         <label for="image-input" class="cursor-pointer bg-blue-500 hover:bg-blue-600 text-white font-semibold py-2 px-5 rounded-xl shadow-md transition duration-200">
             Choose Image
@@ -39,20 +33,20 @@
         <span id="file-name" class="mt-2 text-gray-500 text-sm">No file chosen</span>
     </div>
 
-    <!-- Image Preview -->
-    <div id="image-preview-container" class="flex justify-center items-center mb-6 overflow-hidden rounded-xl border border-gray-300 bg-gray-50 transition-all duration-300">
-        <img id="image-preview" src="https://placehold.co/600x400/E5E7EB/4B5563?text=Image+Preview" alt="Image Preview" class="max-h-80 w-full object-contain rounded-xl transition-transform duration-200">
+    <!-- Preview -->
+    <div class="flex justify-center items-center mb-6 overflow-hidden rounded-xl border border-gray-300 bg-gray-50">
+        <img id="image-preview" src="https://placehold.co/600x400/E5E7EB/4B5563?text=Image+Preview" alt="Image Preview" class="max-h-80 w-full object-contain rounded-xl">
     </div>
 
-    <!-- Analyze Button -->
+    <!-- Button -->
     <div class="flex justify-center mb-6">
-        <button id="analyze-button" disabled class="bg-green-500 opacity-50 cursor-not-allowed text-white font-semibold py-2 px-6 rounded-xl shadow-md transition-colors duration-200">
+        <button id="analyze-button" disabled class="bg-green-500 opacity-50 cursor-not-allowed text-white font-semibold py-2 px-6 rounded-xl shadow-md transition duration-200">
             Analyze Image
         </button>
     </div>
 
-    <!-- Analysis Results -->
-    <div id="analysis-results" class="bg-gray-50 p-6 rounded-xl border border-gray-200 min-h-[120px] flex flex-col items-center justify-center space-y-2">
+    <!-- Results -->
+    <div class="bg-gray-50 p-6 rounded-xl border border-gray-200 min-h-[120px] flex flex-col items-center justify-center space-y-2">
         <div id="loading-spinner" class="hidden loading-indicator"></div>
         <p id="result-text" class="text-gray-700 text-center">Your analysis will appear here.</p>
     </div>
@@ -69,80 +63,79 @@ const resultText = document.getElementById('result-text');
 let base64Image = null;
 let imageMimeType = null;
 
-const apiKey = "YOUR_API_KEY_HERE";
-const apiUrl = `https://generativelanguage.googleapis.com/v1beta/models/gemini-2.5-flash-preview-05-20:generateContent?key=${apiKey}`;
-const systemPrompt = "You are a highly-trained smart meter quality control expert. Analyze images of smart meter installations and classify as 'Good' or 'Bad'. Identify issues if 'Bad' and suggest corrective actions.";
+const systemPrompt = "You are a highly-trained smart meter quality control expert. Analyze images of smart meter installations and determine if they are 'Good' or 'Bad'. Identify issues if 'Bad' and suggest corrective actions.";
 
-imageInput.addEventListener('change', (e) => {
+imageInput.addEventListener('change', e => {
     const file = e.target.files[0];
-    if (file) {
-        fileNameSpan.textContent = file.name;
-        imageMimeType = file.type;
-        const reader = new FileReader();
-        reader.onload = (event) => {
-            imagePreview.src = event.target.result;
-            base64Image = event.target.result.replace(/^data:.+;base64,/, '');
+    if (!file) return resetImage();
+
+    fileNameSpan.textContent = file.name;
+    imageMimeType = file.type;
+
+    const reader = new FileReader();
+    reader.onload = event => {
+        const img = new Image();
+        img.src = event.target.result;
+        img.onload = () => {
+            // Optional: resize large images
+            const canvas = document.createElement('canvas');
+            const MAX_WIDTH = 1024;
+            let scale = Math.min(1, MAX_WIDTH / img.width);
+            canvas.width = img.width * scale;
+            canvas.height = img.height * scale;
+            canvas.getContext('2d').drawImage(img, 0, 0, canvas.width, canvas.height);
+            base64Image = canvas.toDataURL(imageMimeType).replace(/^data:.+;base64,/, '');
+            imagePreview.src = canvas.toDataURL(imageMimeType);
             analyzeButton.disabled = false;
             analyzeButton.classList.remove('opacity-50', 'cursor-not-allowed');
             resultText.textContent = 'Ready to analyze.';
         };
-        reader.readAsDataURL(file);
-    } else {
-        fileNameSpan.textContent = 'No file chosen';
-        imagePreview.src = 'https://placehold.co/600x400/E5E7EB/4B5563?text=Image+Preview';
-        analyzeButton.disabled = true;
-        analyzeButton.classList.add('opacity-50', 'cursor-not-allowed');
-        resultText.textContent = 'Your analysis will appear here.';
-    }
+    };
+    reader.readAsDataURL(file);
 });
+
+function resetImage() {
+    fileNameSpan.textContent = 'No file chosen';
+    imagePreview.src = 'https://placehold.co/600x400/E5E7EB/4B5563?text=Image+Preview';
+    analyzeButton.disabled = true;
+    analyzeButton.classList.add('opacity-50', 'cursor-not-allowed');
+    resultText.textContent = 'Your analysis will appear here.';
+}
 
 analyzeButton.addEventListener('click', async () => {
     if (!base64Image) return;
-    
+
     analyzeButton.disabled = true;
     analyzeButton.classList.add('opacity-50', 'cursor-not-allowed');
     loadingSpinner.classList.remove('hidden');
     resultText.textContent = '';
 
-    const userPrompt = "Please analyze the following smart meter installation image. Is it 'Good' or 'Bad'? Provide detailed reasoning and highlight any issues.";
-
     const payload = {
-        contents: [{
-            role: "user",
-            parts: [
-                { text: userPrompt },
-                { inlineData: { mimeType: imageMimeType, data: base64Image } }
-            ]
-        }],
+        contents: [
+            {
+                role: "user",
+                parts: [
+                    { text: "Please analyze the following smart meter installation image. Is it 'Good' or 'Bad'? Provide detailed reasoning and highlight any issues." },
+                    { inlineData: { mimeType: imageMimeType, data: base64Image } }
+                ]
+            }
+        ],
         systemInstruction: { parts: [{ text: systemPrompt }] }
     };
 
     try {
-        let response;
-        let delay = 1000, retries = 0, maxRetries = 5;
-        while (retries < maxRetries) {
-            try {
-                response = await fetch(apiUrl, {
-                    method: 'POST',
-                    headers: { 'Content-Type': 'application/json' },
-                    body: JSON.stringify(payload)
-                });
-                if (response.status !== 429) break;
-            } catch (e) {
-                console.warn(`Attempt ${retries + 1} failed, retrying in ${delay}ms...`);
-            }
-            retries++;
-            await new Promise(resolve => setTimeout(resolve, delay));
-            delay *= 2;
-        }
+        const response = await fetch('http://localhost:3000/analyze', {
+            method: 'POST',
+            headers: { 'Content-Type': 'application/json' },
+            body: JSON.stringify(payload)
+        });
 
-        if (!response.ok) throw new Error(`API call failed with status: ${response.status}`);
-        const result = await response.json();
-        const text = result?.candidates?.[0]?.content?.parts?.[0]?.text || "No analysis could be generated.";
+        if (!response.ok) throw new Error(`Server returned ${response.status}`);
+        const data = await response.json();
+        const text = data?.candidates?.[0]?.content?.parts?.[0]?.text || "No analysis could be generated.";
         resultText.textContent = text;
-
-    } catch (error) {
-        console.error('Error:', error);
+    } catch (err) {
+        console.error(err);
         resultText.textContent = 'An error occurred during analysis. Please try again.';
     } finally {
         loadingSpinner.classList.add('hidden');
